# workout_api

./: .gitignore  README.md  alembic.ini  compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0674c87ed9ad_init_db.py  2cc4600df42c_update_centros_treinamento.py  aa01fe39dfe5_update_atleta_created_at.py
workout_api/: __init__.py  main.py  routers.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/configs/: database.py  settings.py
workout_api/contrib/: dependencies.py  schemas.py
workout_api/contrib/repository/: models.py
